# kms-interface-rom

./: .gitignore  CMakeLists.txt  README.md  model.json  model.kmd.json
templates/cpp/: complexType_class_cpp.ftl  event_class_hpp.ftl  remoteClass_server_stub_cpp.ftl  remoteClass_server_stub_hpp.ftl
